<resources>
    <string name="app_name">Master Plan</string>
    <string name="title_habits">Habits</string>
    <string name="title_calories">Calories</string>
    <string name="title_chores">Chores</string>
    <string name="add_button">Add button</string>
    <string name="add_chore">Add Chore</string>
    <string name="pick_random_chore">Pick Random Chore</string>
    <string name="random_result">🎲 %s</string>
    <string name="chore_hint">Enter chore name</string>
    <string name="remove_chore">Remove chore</string>
    <string name="add_habit">Add Habit</string>
    <string name="add_habit_2">Add habit</string>
    <string name="delete_habit">Delete habit</string>

    <string name="calorie_goal">Goal:  </string>
    <string name="kcal_remaining">kcal remaining</string>
    <string name="add_meal">Add Meal</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="set_daily_goal">Set Daily Goal</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="name_hint">Name (e.g. Lunch)</string>
    <string name="calories_hint">Calories</string>
    <string name="habit_hint">Habit name</string>
</resources>
