<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_habits">

    <fragment
        android:id="@+id/navigation_habits"
        android:name="com.example.masterplan.ui.habits.HabitsFragment"
        android:label="@string/title_habits"
        tools:layout="@layout/fragment_habits" />

    <fragment
        android:id="@+id/navigation_calories"
        android:name="com.example.masterplan.ui.calories.CaloriesFragment"
        android:label="@string/title_calories"
        tools:layout="@layout/fragment_calories" />

    <fragment
        android:id="@+id/navigation_chores"
        android:name="com.example.masterplan.ui.chores.ChoresFragment"
        android:label="@string/title_chores"
        tools:layout="@layout/fragment_chores" />
</navigation>